Backend: Removed reverse geocoding incomplete addresses as it overloaded the Nominatim API query limit.