@@ -8,18 +8,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.*;
-import java.util.stream.Collectors;
-
-import static java.lang.Thread.sleep;
 
 @Service
 public class BasketballCourtService {
     private final BasketballCourtRepository repository;
 
     private final RestTemplate restTemplate;
-
-    // Cache for addresses to reduce API calls
-    private final Map<String, Map<String, String>> addressCache = new HashMap<>();
 
     public BasketballCourtService(BasketballCourtRepository repository, RestTemplateBuilder restTemplateBuilder) {
         this.repository = repository;
@@ -43,15 +37,6 @@ public class BasketballCourtService {
 
             if (!response.getElements().isEmpty()) {
                 court = new BasketballCourt(response.getElements().get(0));
-
-                if (court.getAddress().isIncomplete()) {
-                    court.setAddress(getAddressDetails(court.getLat(), court.getLon()));
-                    try {
-                        sleep(1100); // sleep to prevent going over Nominatim's rate limit (1 request per second)
-                    } catch (InterruptedException e) {
-                        System.out.println("Error sleeping during nominatim request");
-                    }
-                }
             }
 
             if (court != null) {
@@ -64,77 +49,42 @@ public class BasketballCourtService {
     }
 
     /*
-    * Retrieves address details from the nominatim API
-    * */
-    Map<String, String> getAddressDetails(double lat, double lon) {
-        // Checks cache before calling API
-        String key = lat + "," + lon;
-        if (addressCache.containsKey(key)) {
-            return addressCache.get(key);
-        }
-
-        String uri = String.format("https://nominatim.openstreetmap.org/reverse?lat=%f&lon=%f&format=json&addressdetails=1", lat, lon);
-
-        Map<String, Object> response = restTemplate.getForObject(uri, Map.class);
-
-        Map<String, String> address = response.containsKey("address")
-                ? (Map<String, String>) response.get("address")
-                : Collections.emptyMap();
-
-        // Puts address details into API
-        addressCache.put(key, address);
-        return address;
-    }
-
-    /*
     * Retrieves all courts within a given area.
     * */
     public Set<BasketballCourt> getCourtsInArea(double latitude, double longitude, int range) {
         String apiUrl = getApiUrl(latitude, longitude, range);
-
         OverpassResponse response = restTemplate.getForObject(apiUrl, OverpassResponse.class);
 
         if (response.getElements().isEmpty()) {
             return Collections.emptySet();
         }
 
-        // Get list of elements
-        List<OverpassResponse.Element> elements = response.getElements();
-        Set<BasketballCourt> courts = Collections.synchronizedSet(new HashSet<>());
+        Set<BasketballCourt> existingCourts = new HashSet<>(repository.findByIdIn(
+                response.getElements().stream()
+                        .map(OverpassResponse.Element::getId)
+                        .toList()
+        ));
 
-        // Create a list of IDs from the elements
-        List<Long> courtIds = elements.stream().map(OverpassResponse.Element::getId).collect(Collectors.toList());
+        // Process each element and filter out missing coordinates
+        List<BasketballCourt> newCourts = response.getElements().stream()
+                .map(element -> existingCourts.stream()
+                        .filter(court -> court.getId() == element.getId())
+                        .findFirst()
+                        .orElseGet(() -> {
+                            BasketballCourt newCourt = new BasketballCourt(element);
+                            return (newCourt.getLat() == 0 && newCourt.getLon() == 0) ? null : newCourt;
+                        })
+                )
+                .filter(Objects::nonNull)
+                .toList();
 
-        // Fetch the existing courts from the repository
-        Map<Long, BasketballCourt> existingCourtMap = repository.findByIdIn(courtIds).stream()
-                .collect(Collectors.toMap(BasketballCourt::getId, court -> court));
+        // Save new courts in batch
+        if (!newCourts.isEmpty()) {
+            repository.saveAll(newCourts);
+            existingCourts.addAll(newCourts);
+        }
 
-        // For each element, retrieve the BasketballCourt object, complete address and add to final hash set
-        elements.parallelStream().forEach(element -> {
-            // Get from DB or create object from API
-            BasketballCourt court = existingCourtMap.get(element.getId());
-
-            if (court == null) {
-                court = new BasketballCourt(element);
-
-                // If no lat/lon given, skip court
-                if (court.getLat() == 0 && court.getLon() == 0) {
-                    return;
-                }
-
-                // If address is incomplete, get address details from Nominatim API
-                if (court.getAddress().isIncomplete()) {
-                    court.setAddress(getAddressDetails(court.getLat(), court.getLon()));
-                }
-
-                // Save the new court in the repository
-                court = repository.save(court);
-            }
-
-            courts.add(court);
-        });
-
-        return courts;
+        return existingCourts;
     }
 
     private static String getApiUrl(double latitude, double longitude, int range) {
@@ -148,7 +98,6 @@ public class BasketballCourtService {
                 ");out center; out tags;", locationFilter, locationFilter, locationFilter);
 
         // Using RestClient for the API call
-        String apiUrl = String.format("https://overpass-api.de/api/interpreter?data=%s", query);
-        return apiUrl;
+        return String.format("https://overpass-api.de/api/interpreter?data=%s", query);
     }
 }
